# VideoExamples

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Makefile  README.md
.github/workflows/: build.yml
Documents/: Video-Features.ods
VideoEditor/: CMakeLists.txt  Filmstro.jucer  VideoEditor.jucer
VideoEditor/Source/: ClipProperties.cpp  ClipProperties.h  Library.cpp  Library.h  Main.cpp  MainComponent.cpp  MainComponent.h  Player.cpp  Player.h  PlayerWindow.cpp  PlayerWindow.h  ProcessorComponent.cpp  ProcessorComponent.h  Properties.cpp  Properties.h  RenderDialog.cpp  RenderDialog.h  TimeLine.cpp  TimeLine.h  TimeMeter.cpp  TimeMeter.h  TransportControl.cpp  TransportControl.h
VideoPlayer/: CMakeLists.txt  VideoPlayer.jucer
VideoPlayer/Source/: Main.cpp  MainComponent.cpp  OSDComponent.h
modules/: CMakeLists.txt
scripts/: build_ffmpeg_osx.sh  copy_libraries_osx.sh
